--- a/wiki/BehaviorTracking.wiki
+++ b/wiki/BehaviorTracking.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Ideas and progress on a tracker system within arte.
 #labels Tracking
 
 = Proposals =
