--- a/wiki/DriverOptions.wiki
+++ b/wiki/DriverOptions.wiki
@@ -46,3 +46,9 @@ I mention the RT stuff mainly because most of the activity on the discussion for
 The NI 6254 is nice because it has 32 AI channels at 16 bits, 1Ms/sec acquisition, pretty simple multi-card sync within computer through the RTSI cable, and the supposed ability to export several on-board clocks as digital outputs on the card's pins (useful syncing other things going on in other computers).
 
 General Standards has a 64 channel, 200Ms/sec card (strange specs) for $2500 or so.  We haven't looked carefully at the driver and API associated with that card, and I don't know whether or not it's supported by comedi/analogy.
+
+== Find a different sln specifically for computer sync ==
+
+It seems that the most offensive API fn's are the ones we're using to get ahold of the clock signal for inter-computer sync.  We may think about staying with NIDAQmx 8 Linux and the CentOS 5.5 solution, and adding another PCI card (either NI or another vendor, or a Master-8!) for the sole purpose of exporting TTL clock signals (master) and counting those signals (slaves).  Alternatively, by patching the RTSI cable itself, we may be able to get the clock TTL?  This would probably void the warranty on the NI cards though.
+
+Note - this page is meant to be a discussion.  PLEASE feel free to make comments inline, and/or to delete text about ideas that have been ruled out or are plainly untenable.
