--- a/wiki/DriverOptions.wiki
+++ b/wiki/DriverOptions.wiki
@@ -24,7 +24,7 @@ Given the on-board timing, RT linux seems unnecessary.
 
 Feel free to answer these q's inline, if you research: (thanks)
 
-  *  What _is_ base?  Different driver, or just different API? For comparison between NIDAQmx and NIDAQ Base, see http://www.ni.com/dataacquisition/companion_software.htm#driver. NIDAQ Base is not multi-threaded.
+  *  What _is_ base?  Different driver, or just different API? For comparison between NIDAQmx and NIDAQ Base, see http://www.ni.com/dataacquisition/companion_software.htm#driver. NIDAQ Base is not multi-threaded and doesn't seem to support routing of signals.
   *  Can it do the clock signal exporting we need?  
   *  Can it divide down the clock signal and offset it?
   *  How does sample timing work?  RT linux necessary, useful?
