--- a/wiki/HardwareAndLinuxDistro.wiki
+++ b/wiki/HardwareAndLinuxDistro.wiki
@@ -30,6 +30,18 @@ Our test machine:
 
  link to driver rpm (in case it leaves the repo?)
 
+Current instructions (from elrepo)
+
+rpm -Uvh http://elrepo.org/elrepo-release-5-2.el5.elrepo.noarch.rpm
+
+rpm -Uvh http://elrepo.org/elrepo-release-5-2.el5.elrepo.noarch.rpm
+
+yum --enablerepo=elrepo install kmod-nvidia
+
+nvidia-xconfig
+
+reboot
+
 == Additional libraries ==
 
  libXt-devel (and dependencies)
